# vgkickbot

./: .gitignore  Cargo.toml  README.md
src/: api.rs  botstatus.rs  config.rs  console.rs  cycle.rs  discord.rs  errors.rs  main.rs  recognition.rs
src/api/: bf1api.rs  endpoints.rs  errors.rs
src/api/bf1api/: kick.rs  persona.rs  server.rs
src/recognition/: detection.rs  enhance.rs  kick_player.rs  model.rs  ocr.rs  screenshot.rs
