[package]
name = "vgkickbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
ndarray = "0.16.1"
opencv = { version = "0.94.2", features = ["clang-runtime"] }
reqwest = { version="0.12.12", features = ["json", "cookies"] }
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "macros"] }
win-screenshot = "4.0.12"
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
windows-core = "0.60.1"
enigo = "0.3.0"
serde_json = "1.0.139"
ort = "2.0.0-rc.9"
crossterm = "0.28.1"
tesseract = "0.15.1"
gestalt_ratio = "0.2.1"
csv = "1.3.1"
active-win-pos-rs = "0.9.0"
sysinfo = "0.35.1"
winresource = "0.1.20"

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",
    "fast-rng"
]

[dependencies.windows]
version = "0.60.0"
features = ["Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Console"]

